@@ -3,6 +3,9 @@ apt (0.9.7.9) UNRELEASED; urgency=low
   [ David Kalnischkies ]
   * apt-pkg/indexcopy.cc:
     - rename RunGPGV to ExecGPGV and move it to apt-pkg/contrib/gpgv.cc
+  * apt-pkg/contrib/gpgv.cc:
+    - ExecGPGV is a method which should never return, so mark it as such
+      and fix the inconsistency of returning in error cases
 
  -- David Kalnischkies <kalnischkies@gmail.com>  Fri, 15 Mar 2013 14:15:43 +0100
 
